# ur10_ballControl

./: .bashrc  .gitignore  README.md
matlab/DRAFT_model_6DOF/: .~lock.screenshot.odt#  DSimulator_robot3GDL.mdl  DSimulator_robot3GDL.mdl.original  Dinamic_ur10_3DOF.m  SimpleRobotPlotROS.asv  SimpleRobotPlotROS.m  Symb_equations_UR10.m  Tau.asv  Tau.m  TrajGen.m  getTF.m  screenshot.odt
src/arucoposition/: CMakeLists.txt  calibrationCommand.md  package.xml  readme.md
src/arucoposition/script/: arucoBroadcast.py  frames.gv
src/ball_position_sim/: CMakeLists.txt  package.xml
src/ball_position_sim/msg/: Position_velocity.msg
src/ball_position_sim/src/: ball_position_sim.py
src/ballfinder/: CMakeLists.txt  package.xml
src/ballfinder/launch/: ballfinder.launch
src/ballfinder/params/: blueball.yaml  redball.yaml
src/ballfinder/src/: ballfinder.cpp  ballfinder_python_blue.py  ballfinder_python_red.py  safeZoneBlueBall.py  safeZoneRedBall.py
src/blue_controller/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
src/blue_controller/launch/: blue_controller.launch
src/blue_controller/src/: blue_controller.cpp
src/iai_kinect2_opencv4/kinect2_viewer/: CMakeLists.txt
src/odometry_mocker/: mock_odometry.py
src/state_filter/: CMakeLists.txt  package.xml
src/state_filter/launch/: state_filter.launch
src/state_filter/params/: redball.yaml
src/state_filter/src/: state_filter_node.cpp
src/tum_ics_lacquey_gripper/tum_ics_lacquey_gripper_driver/: .gitignore  (+1 more)
src/tum_ics_ur10_controller_tutorial/: .gitignore
src/ursa_apps/: README.txt
(+25 files in other folders)
